--- a/portfolio/src/components/header/Header.css
+++ b/portfolio/src/components/header/Header.css
@@ -1,21 +1,66 @@
 header{
     height: 100vh;
-    padding-top: 7rem;
+    padding-top: 5rem;
     overflow: hidden;
 }
 
 .header__container{
-    text-align: center;
-    height: 100%;
-    position: relative;
+    display: flex;
+    gap: 10rem;
+        
+    /* text-align: center;
+    height: 100%;*/
+    /* position: relative;  */
+}
+
+.introduction{
+    margin-top: 8.5rem;
+}
+
+.introduction h1{
+    font-size: 3.25rem;
+}
+.introduction h2{
+    font-size: 1.7rem;
+    margin-bottom: -16px;
+    color: var(--color-primary);
+}
+
+.caption_about{
+    color: white;
+    margin-top: .4rem;
+    margin-bottom: 1rem;
+    font-weight:100;
+}
+
+
+.me {
+    width: 80rem;
+    overflow: hidden;
+    margin-right: -6rem;
+    margin-top: -2rem;
+    padding-right: -10px;
+    height: 40rem;
+    background: linear-gradient(var(--color-primary), transparent);
+    border-radius: 30rem 30rem 0 0;
+    padding: 1rem ;
+}
+
+.scroll__down{
+    position: absolute;
+    right: 40rem;
+    bottom: 15rem;
+    transform: rotate(90deg);
+    font-weight: 300;
+    font-size: 2rem;
 }
 
 .cta{
     margin-top: 2.5rem;
     display: flex;
-    gap: 1.2em;
-    justify-content: center;
+    gap: 1.2em; 
 }
+
 
 .header__socials{
     display: flex;
@@ -23,8 +68,8 @@ header{
     align-items: center;
     gap: 0.8rem;
     position: absolute;
-    left: 0;
-    bottom: 3rem;
+    left: 4rem;
+    bottom: 7.5rem;
 }
 
 .header__socials::after{
@@ -34,27 +79,14 @@ header{
     background: var(--color-primary);
 }
 
-.me {
-    background: linear-gradient(var(--color-primary), transparent);
-    width: 22rem;
-    height: 30rem;
-    position: absolute;
-    left: calc(50% - 11rem);
-    margin-top: 4rem;
-    border-radius: 12rem 12rem 0 0;
-    overflow: hidden;
-    padding: 5rem 1.5rem 1.5rem 1.5rem;
-
+.test_light{
+    margin-top: -13px;
+    margin-bottom: -3px;
+    font-size: 2rem;
+    color: var(--color-primary);
 }
 
-.scroll__down{
-    position: absolute;
-    right: -2.3rem;
-    bottom: 5rem;
-    transform: rotate(90deg);
-    font-weight: 300;
-    font-size: 0.9rem;
-}
+
 
 @media screen and (max-width:1024px) {
     .header{
