--- a/portfolio/src/components/experience/Experience.css
+++ b/portfolio/src/components/experience/Experience.css
@@ -16,6 +16,9 @@
     background: transparent;
     border-color: var(--color-primary-variant);
     cursor: default;
+    border: 2px solid var(--color-primary-variant);
+    transform: scale(1.05);
+    transition: 0.4s;
 }
 
 .experience__container > div h3{
@@ -24,6 +27,36 @@
     color: var(--color-primary);
 }
 
+.icons_react{
+    font-size: 100px;
+    margin-bottom: 4rem;
+    margin-left: 17rem;
+}
+
+.icon1{
+    display: flex;
+    flex-direction: row;
+    gap: 4rem;
+    margin-bottom: 4rem;
+}
+
+.icon1:hover{
+    transform: scale(1.03);
+    transition: 1s;
+}
+
+.icon2:hover{
+    transform: scale(1.03);
+    transition: 1s;
+}
+
+
+.icon2{
+    display: flex;
+    flex-direction: row;
+    gap: 4rem;
+    margin-left: 10rem;
+}
 .experience__content{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -56,10 +89,35 @@
 
 @media screen and (max-width:600px) {
     .experience__container{
-        gap: 1rem;
+        gap: 3rem;
+        padding: auto;
+        
     }
     .experience__container > div{
-        width: 100%;
+        width: 18rem;
         padding: 2rem 1rem;
     }
+    .icons_react{
+        margin-left: 2.4rem;
+        font-size: 4rem;
+        
+    }
+    .icon1{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 1rem;
+    }
+    .icon2{
+        display: grid;
+        grid-template-columns: 1fr 1fr ;
+        column-gap: 0rem;
+        margin-left: 1.8rem;
+    }
+    .experience__content{
+    display: flex;
+    flex-direction: column;
+    padding-left: 2.5rem;
+    padding-top: 1px;
+    }
+    
 }
