--- a/portfolio/src/components/contact/Contact.css
+++ b/portfolio/src/components/contact/Contact.css
@@ -25,7 +25,7 @@
 
 .contact__option:hover{
     background: transparent;
-    border-color: var(--color-primary-variant);
+    border: 2px solid rgba(255, 255, 0, 0.379);
     transform: scale(1.05);
     transition: 0.4s;
 }
@@ -59,6 +59,7 @@
 
 .msg_layout{
     border: 2px solid var(--color-primary-variant);
+    border: 2px solid rgba(255, 255, 0, 0.379);
     margin-top: 23px;
     border-radius: 0.5rem;
     margin-bottom: 4rem;
@@ -103,7 +104,7 @@ input, textarea{
     padding: 1.5rem;
     border-radius: 0.5rem;
     background: transparent;
-    border: 2px solid var(--color-primary-variant);
+    border: 2px solid rgba(255, 255, 0, 0.379);
     resize: none;
     color: white;
 }
@@ -125,5 +126,25 @@ button{
     .container.contact__container{
         width: var(--container-width-sm);
    }
+    .contact__options{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .form_flex{
+        display: flex;
+        flex-direction: column;
+    }
+    .msg_layout{
+        margin-left: 1.2rem;
+        margin-right: 1.2rem; 
+        margin-bottom: 5px;
+        display: none;
+        
+    }
+    button{
+        margin-left: 6rem;
+    }
+    
 }
     
