--- a/portfolio/src/components/footer/Footer.css
+++ b/portfolio/src/components/footer/Footer.css
@@ -1,5 +1,6 @@
 .footer{
     background: var(--color-primary);
+    --color-primary: rgba(255, 255, 0, 0.393);
     padding: 1rem 0;
     text-align: center;
     font-size: 0.9rem;
@@ -56,6 +57,9 @@
 }
 
 @media screen and (max-width:600px) {
+    .footer{
+        height: 40em;
+    }
     .permalinks {
         flex-direction: column;
         gap: 1.5rem;
