--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -13,11 +13,14 @@
 :root {
   --color-bg: #1f1f38;
   --color-bg-variant: #2c2c6c;
+
+  --color-bg-variant:rgba(255, 255, 0, 0.155);
   --color-primary: #4db5ff;
+  --color-primary: rgba(255, 255, 0, 0.838);
+  --color-primary: rgba(255, 255, 0, 0.379);
   --color-primary-variant: rgba(77,181,255,0.4);
   --color-white: #fff;
   --color-light: rgba(255,255,255,0.6);
-
   --transition: all 400ms ease; 
 
   --container-width-lg: 75%;
@@ -39,6 +42,14 @@ body{
   color: var(--color-white);
   line-height: 1.7;
   background-image: url(../src/assets/bg-texture.png);
+}
+
+body{
+  font-family: "Poppins", sans-serif;
+  background: var(--color-bg);
+  color: var(--color-white);
+  background: black;
+  line-height: 1.7;
 }
 
 .container{
@@ -87,10 +98,13 @@ a:hover{
   width: max-content;
   display: inline-block;
   color: var(--color-primary);
+  color: rgba(255, 255, 0, 0.659);
   padding: 0.75rem 1.2rem ;
   border-radius: 0.4rem;
   cursor: pointer;
   border: 1px solid var(--color-primary);
+  border: 1px solid rgb(170, 170, 118);
+
   transition: var(--transition);
 }
 
@@ -103,6 +117,7 @@ a:hover{
 
 .btn-primary{
   background: var(--color-primary);
+  background: rgba(255, 255, 0, 0.438);
   color: var(--color-bg);
 }
 
