--- a/portfolio/src/components/about/About.css
+++ b/portfolio/src/components/about/About.css
@@ -10,6 +10,7 @@
     border-radius: 2rem;
     background: linear-gradient(45deg,transparent,var(--color-primary),transparent);
     background: linear-gradient(45deg,transparent,rgba(255, 255, 0, 0.451),transparent);
+
     display: grid;
     place-items: center;
 }
@@ -65,6 +66,7 @@
     text-align: justify;
 }
 
+
 @media screen and (max-width:1024px) {
     .about__container{
         grid-template-columns: 1fr;
@@ -77,16 +79,19 @@
     .about__content p{
         margin: 1rem 0 1.5rem;
     }
+    .about__card{
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+   
+  
 }
 
 @media screen and (max-width:600px) {
     .about__me{
-        width: 65%;
+        width: 70%;
         margin: 0 auto 3rem;
-    }
-    .about__cards{
-        grid-template-columns: 1fr 1fr;
-        gap: 1rem;
     }
     .about__content{
         text-align: center;
@@ -95,5 +100,10 @@
     }
     .about__content p{
         margin: 1.5rem 0;
+    }
+    .about__card{
+        width: 95%;
+        margin-right: auto;
+        margin-left: auto;
     }
 }
