--- a/portfolio/src/components/contact/Contact.css
+++ b/portfolio/src/components/contact/Contact.css
@@ -25,7 +25,7 @@
 
 .contact__option:hover{
     background: transparent;
-    border: 2px solid rgba(255, 255, 0, 0.379);
+    border: 2px solid white;
     transform: scale(1.05);
     transition: 0.4s;
 }
@@ -115,12 +115,59 @@ button{
 }
 
 
-@media screen and (max-width:1024px) {
-   .container.contact__container{
+
+
+
+@media screen and (max-width: 1024px) {
+    .container.contact__container {
+        width: 90%;
+        gap: 5%;
+    }
+
+    .contact__options {
+        flex-direction: row;
+        gap: 20px;
+        align-items: center;
+    }
+
+    .contact__option {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .msg_layout{
+        padding-left: 15rem;
+        padding-bottom: 1rem;
+        display: flex;
+    
+    }
+
+    .form_flex {
         grid-template-columns: 1fr;
-        gap: 2rem;
-   }
+    }
+
+    .send_msg_arrow {
+        display: none;
+    }
+
+    .send_msg {
+        margin-top: 20px;
+        margin-left: 0;
+        text-align: center;
+    }
+
+    form {
+        width: 100%;
+        margin-left: 0;
+        margin-top: -2rem;
+    }
+
+    button {
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
+
 
 @media screen and (max-width:600px) {
     .container.contact__container{
@@ -130,6 +177,10 @@ button{
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        margin-left: auto;
+        margin-right: auto;
+        width: 70%;
+        margin-bottom: 4rem;
     }
     .form_flex{
         display: flex;
