--- a/portfolio/src/components/experience/Experience.css
+++ b/portfolio/src/components/experience/Experience.css
@@ -8,7 +8,7 @@
     background: var(--color-bg-variant);
     padding: 2.4rem 5rem;
     border-radius: 2rem;
-    border: 1px solid transparent;
+    border: 1px solid rgb(87, 87, 3);
     transition: var(--transition);
 }
 
@@ -24,7 +24,7 @@
 .experience__container > div h3{
     text-align: center;
     margin-bottom: 2rem;
-    color: var(--color-primary);
+    color: white;
 }
 
 .icons_react{
@@ -73,32 +73,62 @@
     color: var(--color-primary);
 }
 
-@media screen and (max-width:1024px) {
-    .experience__container{
-        grid-template-columns: 1fr;
+    @media screen and (max-width: 1024px) {
+        .experience__container {
+            grid-template-columns: 1fr 1fr;
+            gap: 5rem;
+        }
+    
+        .experience__container > div {
+            padding: 2rem 1rem;
+        }
+    
+        .icons_react {
+            margin-left: auto;
+            margin-right: auto;
+            width: 80%;
+            /* text-align: center; */
+            font-size: 5rem;
+        }
+        .icon2{
+            margin-left: 1rem;
+        }
+    
+        .icon1, .icon2 {
+            display: flex;
+            justify-content: center;
+            gap: 3rem;
+            margin-bottom: 2rem;
+        }
+    
+        .experience__content {
+            grid-template-columns: 1fr;
+        }
+    
+        .experience__details {
+            margin-left: 3rem;
+        }
     }
-    .experience__container > div{
-        width: 80%;
-        padding: 2rem;
-        margin: 0 auto;
-    }
-    .experience__content{
-        padding: 1rem;
-    }
-}
+    
 
 @media screen and (max-width:600px) {
     .experience__container{
+        display: flex;
+        flex-direction: column;
         gap: 3rem;
         padding: auto;
-        
     }
     .experience__container > div{
-        width: 18rem;
-        padding: 2rem 1rem;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
+        padding-top: 2rem ;
     }
+    
     .icons_react{
-        margin-left: 2.4rem;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
         font-size: 4rem;
         
     }
@@ -116,7 +146,7 @@
     .experience__content{
     display: flex;
     flex-direction: column;
-    padding-left: 2.5rem;
+    padding-left: 1px;
     padding-top: 1px;
     }
     
