--- a/portfolio/src/components/footer/Footer.css
+++ b/portfolio/src/components/footer/Footer.css
@@ -1,6 +1,5 @@
 .footer{
-    background: var(--color-primary);
-    --color-primary: rgba(255, 255, 0, 0.393);
+    background: rgba(255, 255, 0, 0.515);
     padding: 1rem 0;
     text-align: center;
     font-size: 0.9rem;
